# agent_rotary

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: main.py
scripts/: manual_test.py
src/: async_bridge.rs  context.rs  error.rs  lib.rs
src/engine/: edge.rs  graph.rs  mod.rs  node.rs  template.rs  workflow.rs
src/providers/: claude.rs  codex.rs  http_client.rs  kimi.rs  mod.rs  openai_compat.rs
src/pyapi/: context_py.rs  mod.rs  workflow_py.rs
tests/: test_workflow.py
