[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "agent-rotary"
version = "0.1.0"
requires-python = ">=3.8"
description = "Multi-LLM orchestrator & rotary workflow router"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[tool.maturin]
module-name = "agent_rotary"
